# small-db

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Cargo.toml  LICENSE  Makefile  README.md  REVIEW_QUESTIONS.md  compilation-options.yaml  err  features.yaml  format-ignore  out  readable.txt  rustfmt.toml
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  kcov_test.sh  publish-book.yml  rust.yml  test.yml  test.yml.bak  test_aries_no_steal_aries_force_read_committed.yml  test_aries_no_steal_aries_force_read_uncommitted.yml  test_aries_no_steal_aries_force_repeatable_read.yml  test_aries_no_steal_aries_force_serializable.yml  test_aries_no_steal_aries_no_force_read_committed.yml  test_aries_no_steal_aries_no_force_repeatable_read.yml  test_aries_no_steal_aries_no_force_serializable.yml  test_aries_steal_aries_force_read_committed.yml  test_aries_steal_aries_force_read_uncommitted.yml  test_aries_steal_aries_force_repeatable_read.yml  test_aries_steal_aries_no_force_read_committed.yml  test_aries_steal_aries_no_force_read_uncommitted.yml  test_aries_steal_aries_no_force_repeatable_read.yml  test_aries_steal_aries_no_force_serializable.yml  test_backup.yml  test_page_latch_aries_no_steal_aries_force.yml  test_page_latch_aries_no_steal_aries_force_read_committed.yml  test_page_latch_aries_no_steal_aries_force_read_uncommitted.yml  test_page_latch_aries_no_steal_aries_force_repeatable_read.yml  test_page_latch_aries_no_steal_aries_force_serializable.yml  test_page_latch_aries_no_steal_aries_no_force.yml  test_page_latch_aries_no_steal_aries_no_force_read_committed.yml  (+33 more)
cmake/helper/: CMakeLists.txt
docs/: clutter.md  dev-history.md  implementation-details.md  rust_guidelines.md  storage-format.md
play/: CMakeLists.txt  run.sh
play/grpc-system/: CMakeLists.txt  foo.proto  main.cc
scripts/: flamegraph.sh  get_test_binary.py  run_a_test.sh  run_until_crash.sh  trace.sh
small-db-book/: README.md  book.toml
small-db-jepsen/: .gitignore  CHANGELOG.md  README.md  project.clj
small-rows-rust/: .gitignore  Cargo.toml  README.md  compilation-options.yaml
src/: CMakeLists.txt  bufferpool.rs  cell.rs  concurrent_status.rs  database.rs  error.rs  field.rs  io.rs  lib.rs  log.rs  main.rs  operator.rs  page.rs  page_id.rs  permissions.rs  predicate.rs  row.rs  sequential_scan.rs  serialize.rs  sql.rs  table.rs  test_utils.rs  transaction.rs  transaction_id.rs  tuple.rs  types.rs  util.rs  utils.rs
src/btree/: buffer_pool.rs  catalog.rs  consts.rs  database.rs  database_singleton.rs  file.rs  internal_page.rs  mod.rs  page.rs  page_cache.rs  page_id.rs  table.rs  toolkit.rs  tuple.rs
src/btree/page/: base_page.rs  header_page.rs  internal_page.rs  leaf_page.rs  mod.rs  page.rs  page_category.rs  page_id.rs  root_pointer_page.rs  traits.rs  virtual_page.rs
src/btree/table/: delete.rs  insert.rs  insert_crab.rs  mod.rs  search.rs  table.rs  table_iter.rs
src/btree_system_test/: btree_insert_test.rs  mod.rs
src/catalog/: CMakeLists.txt  catalog.cc  catalog.h  catalog.proto
src/clock_skew/: CMakeLists.txt  client.cc  server.cc  wire.h
src/closedts/: CMakeLists.txt  registry.cc  registry.h
src/common/: catalog.rs  database.rs  mod.rs
src/common/schema/: schema.rs
src/encode/: CMakeLists.txt  encode.cc  encode.h
src/execution/: CMakeLists.txt  execution.proto  insert.cc  insert.h  query.cc  query.h  update.cc  update.h
src/executor/: CMakeLists.txt  query.cc  query.h  update.cc  update.h
src/gossip/: CMakeLists.txt  gossip.cc  gossip.h  gossip.proto
src/gossip2/: CMakeLists.txt  gossip.cc  gossip.h  gossip.proto
src/id/: CMakeLists.txt  generator.cc  generator.h
src/insert/: CMakeLists.txt  insert.cc  insert.h  insert.proto
src/lock/: CMakeLists.txt  lock_manager.cc  lock_manager.h
src/observation/: event.rs  mod.rs  ob.rs  span.rs
src/peers/: CMakeLists.txt  server_registry.cc  server_registry.h  server_registry.proto
src/pg_wire/: CMakeLists.txt  pg_wire.cc  pg_wire.h
src/play/: CMakeLists.txt
src/play/backtracking/: CMakeLists.txt  main.cc
src/play/test_deps/: CMakeLists.txt  Makefile  main.cpp  run.sh
src/play/thread/: test.cpp
src/query/: CMakeLists.txt  query.cc  query.h
src/rocks/: CMakeLists.txt  keys.cc  keys.h  rocks.cc  rocks.h  rocks_scan.cc
src/schema/: CMakeLists.txt  const.h  partition.cc  partition.h  schema.cc  schema.h  schema.proto
src/semantics/: CMakeLists.txt  check.cc  check.h  extract.cc  extract.h
src/server/: CMakeLists.txt  main.cc  main2.cc  mod.rs  pg_handler.rs  server.cc  server.h  stmt_handler.cc  stmt_handler.h
src/server_info/: CMakeLists.txt  info.cc  info.h
src/sql/: mod.rs  sql_handler.rs
src/sql/executor/: expr_state.rs  from.rs  join.rs  mod.rs  select.rs  sql_handler.rs  stream.rs
src/sql/executor/stream/: stream.rs  table_stream.rs
src/sql/session/: mod.rs
src/storage/: mod.rs
src/storage/base/: cell.rs  field.rs  mod.rs
src/storage/schema/: field.rs  mod.rs  schema.rs  types.rs
src/storage/table_schema/: schema.rs
src/storage/tuple/: cell.rs  mod.rs  tuple.rs
src/transaction/: concurrent_status.rs  log_aries.rs  mod.rs  tx.rs  wait_for_graph.rs  wal_new.rs
src/tx_log/: log_manager.rs  mod.rs  naive.rs
src/txn/: CMakeLists.txt  handle.cc  handle.h  txn.cc  txn.h  txn.proto
src/type/: CMakeLists.txt  type.cc  type.h  type.proto
src/util/: CMakeLists.txt
src/util/ip/: CMakeLists.txt  ip.cc  ip.h
src/util/narrow/: CMakeLists.txt  narrow.h
src/util/time/: CMakeLists.txt  time.h
src/utils/: io.rs  mod.rs  number.rs  other.rs  serialize.rs  unique.rs
test/: CMakeLists.txt
test/integration_test/: CMakeLists.txt  sql_test.cc  test.sqltest
test/unit/: CMakeLists.txt  closed_ts_register_test.cc  closed_ts_test.cc  dirty_read_test.cc  intent_promote_test.cc  txn_test_fixture.h
tests/: btree_delete_test.rs  btree_insert_test.rs  btree_scan_test.rs  btree_test.rs  common.rs  doc.rs  log_test.rs  play.rs  scan_benchmark.rs  small_tests.rs
(+166 files in other folders)
