[package]
authors = ["XiaochenCui <jcnlcxc.new@gmail.com>"]
description = "A simple database writing in rust, inspired from mit 6.830"
documentation = "https://docs.rs/simple-db-rust"
edition = "2018"
homepage = "https://crates.io/crates/simple-db-rust"
license = "BSD-3-Clause"
name = "simple-db-rust"
readme = "README.md"
repository = "https://github.com/XiaochenCui/simple-db-rust/"
version = "0.1.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.2"
env_logger = "0.7.1"
hex = "0.4.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
once_cell = "1.4.0"
rand = "0.7.3"