[package]
authors = ["XiaochenCui <jcnlcxc.new@gmail.com>"]
description = "A small database writing in rust, inspired from mit 6.830"
documentation = "https://docs.rs/small-db"
edition = "2018"
homepage = "https://crates.io/crates/small-db"
license = "BSD-3-Clause"
name = "small-db"
readme = "README.md"
repository = "https://github.com/small-db/small-db"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.2"
env_logger = "0.7.1"
hex = "0.4.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
once_cell = "1.4.0"
rand = "0.7.3"
backtrace = "0.3"
crossbeam = "0.8.2"
sqlparser = "0.33.0"
pgwire = "0.14.0"
async-trait = "0.1.68"
tokio = { version = "1.28.1", features = ["full"] }

[features]
tree_latch = []
page_latch = []
benchmark = []
