add_subdirectory(util)
add_subdirectory(server_info)
add_subdirectory(id)
add_subdirectory(type)
add_subdirectory(execution)
add_subdirectory(rocks)
add_subdirectory(schema)
add_subdirectory(semantics)
add_subdirectory(catalog)
add_subdirectory(server)
add_subdirectory(gossip)
add_subdirectory(pg_wire)
add_subdirectory(play)
